--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,3 +1,15 @@
-body, wrapper {
-    min-height:100vh;
- }
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #f5f5f5;
+    text-align: center;
+}
+
+.containerend {
+    width: auto;
+    max-width: 680px;
+    padding: 0 15px;
+}
