--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -6,6 +6,8 @@
     line-height: 60px;
     background-color: #f5f5f5;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .containerend {
