--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,3 +1,14 @@
+/* Sticky footer help: https://stackoverflow.com/questions/46722697/bootstrap-4-sticky-footer-not-sticking */
+
+html {
+    position: relative;
+    min-height: 100vh;
+}
+
+main {
+    margin-bottom: 60px;
+}
+
 .footer {
     position: absolute;
     bottom: 0;
@@ -6,12 +17,4 @@
     line-height: 60px;
     background-color: #f5f5f5;
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.containerend {
-    width: auto;
-    max-width: 680px;
-    padding: 0 15px;
 }
