made portfolio page mobile responsive

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,4 +1,5 @@
 /* Sticky footer help: https://stackoverflow.com/questions/46722697/bootstrap-4-sticky-footer-not-sticking */
+/* https://www.freecodecamp.org/news/how-to-keep-your-footer-where-it-belongs-59c6aa05c59c/ */
 
 html {
     position: relative;
