--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,21 +1,3 @@
-/* Sticky footer help: https://stackoverflow.com/questions/46722697/bootstrap-4-sticky-footer-not-sticking */
-/* https://www.freecodecamp.org/news/how-to-keep-your-footer-where-it-belongs-59c6aa05c59c/ */
-
-html {
-    position: relative;
-    min-height: 100vh;
-}
-
 main {
-    margin-bottom: 60px;
-}
-
-.footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-    line-height: 60px;
-    background-color: #f5f5f5;
-    text-align: center;
+    margin-bottom: 20px
 }
