--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,3 +1,19 @@
-main {
-    margin-bottom: 20px
-}
+html, body {
+    height: 100%;
+  }
+
+  body {
+    display: flex;
+    flex-direction: column;
+  }
+
+  main {
+    flex: 1 0 auto;
+  }
+
+  .footer {
+    flex-shrink: 0;
+    text-align: center;
+  }
+
+  /* Sticky Footer Help: https://css-tricks.com/couple-takes-sticky-footer/ */
