--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,12 +1,34 @@
-body, .sticky-footer-wrapper {
-  min-height:100vh;
+html,
+body {
+  height: 100%;
 }
 
-.flex-fill {
-  flex:1 1 auto;
+.image {
+  position: relative;
+  display: inline-block;
+  /* Make the width of box same as image */
 }
 
+.image .text {
+  position: absolute;
+  z-index: 999;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+  text-align: center;
+  top: 80%;
+  /* Adjust this value to move the positioned div up and down */
+  background: rgba(0, 0, 0, 0.8);
+  font-family: Arial, sans-serif;
+  color: #fff;
+  width: 100%;
+  /* Set the width of the positioned div */
+}
 
+#page-content {
+  flex: 1 0 auto;
+}
 
-
-/* Sticky Footer Resource: https://stackoverflow.com/questions/46722697/bootstrap-4-sticky-footer-not-sticking */
+#sticky-footer {
+  flex-shrink: none;
+}
